--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <hr>
       </b>
       <label>Webcam View - </label>
-      <div id="cammera"></div>
+      <div id="camera"></div>
       <br><br>
       <div id="result"></div>
       <br><br>
